[project]
name = "coles-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.14.0",
]


[dependency-groups]
dev = [
    "coverage>=7.10.6",
    "ipykernel>=6.30.1",
    "mypy>=1.18.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
]




[tool.black]
include = "src/.*\\.(py|pyi|ipynb)$"
line-length = 100

[tool.coverage.report]
fail_under = 100

[tool.coverage.run]
source = ["src"]

[tool.mypy]
files = ["src/"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true


[tool.ruff]
# Use Black-like settings
line-length = 100
indent-width = 4

[tool.ruff.format]
# Use Black-like settings
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"
